--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
+    "moment": "^2.28.0",
     "pretty-ms": "^7.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
